Finished general layout for header and head-box
Overall, this is going well. I am still having a slight problem with
flexbox not growing the way I expect, when it should be 50%, it seems
to be more. I can still work with this

--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
         <div class="logo">LOGO</div>
         <div class="head-right-links">
             <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
             </ul>
         </div>
     </div>
-    <div class="head-box">Head/title box</div>
+    <div class="head-box">
+        <div class="head-blurb">
+            <div style="width: 500px;"><h1>This website is awesome</h1>
+            <p class="content">Here is the writing that is supposed to go into the blurb about the website</p>
+            <button class="head-button">Click here!</button>
+            </div>
+        </div>
+        <div class="head-img"><img src="#" alt="placeholder"></div>
+    </div>
     <div class="info-box">Information box</div>
     <div class="quote-box">Quote box</div>
     <div class="signup-box">Signup box</div>
