Made it through the info-box section
I'm not sure how everything will work out when I try and add real
content with images, but we'll see. So far it isn't too bad with
placeholders

--- a/index.html
+++ b/index.html
@@ -18,14 +18,34 @@
     </div>
     <div class="head-box">
         <div class="head-blurb">
-            <div style="width: 500px;"><h1>This website is awesome</h1>
+            <div style="width: 500px;"><h1 style="font-size: 36px;">Welcome to the Blupee Conservation Society!</h1>
             <p class="content">Here is the writing that is supposed to go into the blurb about the website</p>
             <button class="head-button">Click here!</button>
             </div>
         </div>
-        <div class="head-img"><img src="#" alt="placeholder"></div>
+        <div class="head-img"><img src="./img/full_design_image.png" alt="placeholder" style="height: 300px; width: 500px;"></div>
     </div>
-    <div class="info-box">Information box</div>
+    <div class="info-box">
+        <div class="info-box-head"><h2>Fun Facts About Blupees</h2></div>
+        <div class="info-box-content">
+            <div class="fun-fact">
+                <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
+                <p class="fact-content">Did you know? Blupees rarely carry more than 30 ruppees on them.</p>
+            </div>
+            <div class="fun-fact">
+                <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
+                <p class="fact-content">Did you know? Blupees rarely carry more than 30 ruppees on them.</p>
+            </div>
+            <div class="fun-fact">
+                <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
+                <p class="fact-content">Did you know? Blupees rarely carry more than 30 ruppees on them.</p>
+            </div>
+            <div class="fun-fact">
+                <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
+                <p class="fact-content">Did you know? Blupees rarely carry more than 30 ruppees on them.</p>
+            </div>
+        </div>
+    </div>
     <div class="quote-box">Quote box</div>
     <div class="signup-box">Signup box</div>
     <div class="footer">Footer box</div>
