Finished general layout
Now that the general layout is complete, I am going to begin working
on content. Once the content is done, I'll work with Cyndi on colors

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <div class="head-img"><img src="./img/full_design_image.png" alt="placeholder" style="height: 300px; width: 500px;"></div>
     </div>
     <div class="info-box">
-        <div class="info-box-head"><h2>Fun Facts About Blupees</h2></div>
+        <div class="info-box-head"><h2>Did You Know This About Blupees?</h2></div>
         <div class="info-box-content">
             <div class="fun-fact">
                 <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
-                <p class="fact-content">Did you know? Blupees rarely carry more than 30 ruppees on them.</p>
+                <p class="fact-content">Blupees are often found near the entrance of caves, leading adventurers to treasure!</p>
             </div>
             <div class="fun-fact">
                 <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
@@ -42,12 +42,26 @@
             </div>
             <div class="fun-fact">
                 <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
-                <p class="fact-content">Did you know? Blupees rarely carry more than 30 ruppees on them.</p>
+                <p class="fact-content">Blupees rarely carry more than 30 ruppees on them. You would be better off mining gems for a quick buck.</p>
             </div>
         </div>
     </div>
-    <div class="quote-box">Quote box</div>
-    <div class="signup-box">Signup box</div>
+    <div class="quote-box">
+        <div class="quote-content">
+            <p class="quote">This is where we are going to have a quote from someone about blupees. Likely going to be Kolton since he's obsessed with becoming a Satori. Blah, blah, blah, a bunch of other content for the quote as well.</p>
+            <p class="quote-ref">- Likely Kolton, Monster Expert</p>
+        </div>
+    </div>
+    <div class="signup-box">
+        <div>
+            <div class="signup-box-details"><div class="signup-content">
+                <p style="margin: 10px 10px 8px 0;">Call to action!</p>
+                <p style="margin: 0;">It it time to protect the blupees!</p>
+            </div>
+            <button class="signup-button">Click here!</button>
+            </div>
+        </div>
+    </div>
     <div class="footer">Footer box</div>
 </body>
 
