Major design progress
Added logos and began working on color;
I am using an image as a placeholder for the background, if I decide
I want to keep it, I will need to credit it

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">LOGO</div>
+        <div class="logo"><img src="./img/triforce.png" alt="Triforce logo" style="height: 25px;"> Blupee Conservation Society</div>
         <div class="head-right-links">
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Become a Member</a></li>
+                <li><a href="#">Adopt a Blupee</a></li>
             </ul>
         </div>
     </div>
     <div class="head-box">
         <div class="head-blurb">
-            <div style="width: 500px;"><h1 style="font-size: 36px;">Welcome to the Blupee Conservation Society!</h1>
-            <p class="content">Here is the writing that is supposed to go into the blurb about the website</p>
-            <button class="head-button">Click here!</button>
+            <div style="width: 600px;"><h1 style="font-size: 36px;">Welcome to the Blupee Conservation Society!</h1>
+            <p class="content">Blupees are a rare, mystical creature living in Hyrule. Very little is known about them or their origins, and studying them is difficult due to their skittish nature. Unfortunately, many adventurers will strike blupees to take the ruppees that blupees are known to collect. While they are very resilient, the Blupee Conservation Society is working dilligently to put an end to the needless violence.</p>
+            <button class="head-button">Join Our Newsletter</button>
             </div>
         </div>
-        <div class="head-img"><img src="./img/full_design_image.png" alt="placeholder" style="height: 300px; width: 500px;"></div>
+        <div class="head-img"><img src="./img/Blupee Conservation Logo.png" alt="Logo" style="height: auto; width: 500px;"></div>
     </div>
     <div class="info-box">
         <div class="info-box-head"><h2>Did You Know This About Blupees?</h2></div>
@@ -34,22 +34,22 @@
             </div>
             <div class="fun-fact">
                 <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
-                <p class="fact-content">Did you know? Blupees rarely carry more than 30 ruppees on them.</p>
+                <p class="fact-content">Blupees are know to disguise themselves as Bubbulfrogs and will drop a rare gem when their true identity is discovered.</p>
             </div>
             <div class="fun-fact">
                 <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
-                <p class="fact-content">Did you know? Blupees rarely carry more than 30 ruppees on them.</p>
+                <p class="fact-content">While often found alone, blupees have been know to live in large, hidden groups, often under the protective care of the mysterious Satori.</p>
             </div>
             <div class="fun-fact">
                 <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
-                <p class="fact-content">Blupees rarely carry more than 30 ruppees on them. You would be better off mining gems for a quick buck.</p>
+                <p class="fact-content">Blupees rarely drop more than 30 ruppees. You would be better off mining gems for a quick buck.</p>
             </div>
         </div>
     </div>
     <div class="quote-box">
         <div class="quote-content">
-            <p class="quote">This is where we are going to have a quote from someone about blupees. Likely going to be Kolton since he's obsessed with becoming a Satori. Blah, blah, blah, a bunch of other content for the quote as well.</p>
-            <p class="quote-ref">- Likely Kolton, Monster Expert</p>
+            <p class="quote">This is where we are going to have a quote from someone about blupees. Likely going to be Koltin since he's obsessed with becoming a Satori. Blah, blah, blah, a bunch of other content for the quote as well.</p>
+            <p class="quote-ref">- Likely Koltin, Monster Expert</p>
         </div>
     </div>
     <div class="signup-box">
