More tweaks to styles
Working on some colors, I will need Cyndi's help on that...

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo"><img src="./img/triforce.png" alt="Triforce logo" style="height: 25px;"> Blupee Conservation Society</div>
+        <img src="./img/triforce.png" alt="Triforce logo" style="height: 25px; width: auto;">
+        <div class="logo">Blupee Conservation Society</div>
         <div class="head-right-links">
             <ul>
                 <li><a href="#">About Us</a></li>
@@ -15,11 +16,12 @@
                 <li><a href="#">Adopt a Blupee</a></li>
             </ul>
         </div>
+        <img src="./img/triforce.png" alt="Triforce logo" style="height: 25px; width: auto;">
     </div>
     <div class="head-box">
         <div class="head-blurb">
             <div style="width: 600px;"><h1 style="font-size: 36px;">Welcome to the Blupee Conservation Society!</h1>
-            <p class="content">Blupees are a rare, mystical creature living in Hyrule. Very little is known about them or their origins, and studying them is difficult due to their skittish nature. Unfortunately, many adventurers will strike blupees to take the ruppees that blupees are known to collect. While they are very resilient, the Blupee Conservation Society is working dilligently to put an end to the needless violence.</p>
+            <p class="content">Blupees are rare, mystical creatures living throughout Hyrule. Very little is known about them or their origins, and studying them is difficult due to their skittish nature. Unfortunately, many adventurers will strike blupees to take the ruppees that they are known to collect. While they are very resilient, the Blupee Conservation Society is working dilligently to put an end to the needless violence.</p>
             <button class="head-button">Join Our Newsletter</button>
             </div>
         </div>
@@ -56,7 +58,7 @@
         <div>
             <div class="signup-box-details"><div class="signup-content">
                 <p style="margin: 10px 10px 8px 0;">Call to action!</p>
-                <p style="margin: 0;">It it time to protect the blupees!</p>
+                <p style="margin: 0;">It is time to protect the blupees!</p>
             </div>
             <button class="signup-button">Click here!</button>
             </div>
