--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header">
         <img src="./img/triforce.png" alt="Triforce logo" style="height: 25px; width: auto;">
-        <div class="logo">Blupee Conservation Society</div>
+        <div class="logo"><a href="./index.html">Blupee Conservation Society</a></div>
         <div class="head-right-links">
             <ul>
                 <li><a href="#">About Us</a></li>
@@ -56,11 +56,15 @@
     </div>
     <div class="signup-box">
         <div>
-            <div class="signup-box-details"><div class="signup-content">
+            <div class="signup-box-details">
+                <div class="signup-content">
                 <p style="margin: 10px 10px 8px 0;">Call to action!</p>
                 <p style="margin: 0;">It is time to protect the blupees!</p>
-            </div>
-            <button class="signup-button">Click here!</button>
+                </div>
+                <div class="signup-button-group">
+                <button class="signup-button">Donate Now</button>
+                <button class="signup-button">Adopt a Blupee</button>
+                </div>
             </div>
         </div>
     </div>
