--- a/index.html
+++ b/index.html
@@ -31,35 +31,36 @@
         <div class="info-box-head"><h2>Did You Know This About Blupees?</h2></div>
         <div class="info-box-content">
             <div class="fun-fact">
-                <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
+                <img class="fact-img" src="./img/Blupee-portrait.jpeg" alt="Portrait of a blupee" style="height: 100px;">
                 <p class="fact-content">Blupees are often found near the entrance of caves, leading adventurers to treasure!</p>
             </div>
             <div class="fun-fact">
-                <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
+                <img class="fact-img" src="./img/TOTK_Bubbulfrog.jpeg" alt="Bubbulfrog" style="height: 100px;">
                 <p class="fact-content">Blupees are know to disguise themselves as Bubbulfrogs and will drop a rare gem when their true identity is discovered.</p>
             </div>
             <div class="fun-fact">
-                <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
+                <img class="fact-img" src="./img/Lord-of-the-mountain.png" alt="A Satori" style="height: 100px;">
                 <p class="fact-content">While often found alone, blupees have been know to live in large, hidden groups, often under the protective care of the mysterious Satori.</p>
             </div>
             <div class="fun-fact">
-                <img class="fact-img" src="./img/color_and_fonts.png" alt="placeholder" style="height: 100px;">
+                <img class="fact-img" src="./img/blupee-rupee.png" alt="Drawing of a blupee with rupees" style="height: 100px;">
                 <p class="fact-content">Blupees rarely drop more than 30 ruppees. You would be better off mining gems for a quick buck.</p>
             </div>
         </div>
     </div>
     <div class="quote-box">
         <div class="quote-content">
-            <p class="quote">This is where we are going to have a quote from someone about blupees. Likely going to be Koltin since he's obsessed with becoming a Satori. Blah, blah, blah, a bunch of other content for the quote as well.</p>
-            <p class="quote-ref">- Likely Koltin, Monster Expert</p>
+            <p class="quote">There is nothing cuter and more innocent in Koltin's eye than a blupee! I will chase my dream of transforming into a Satori so I may watch over all of them and chase away anyone trying to take their precious rupees! Nyyagh!</p>
+            <p class="quote-ref">- Koltin, Hyrule Monster Expert</p>
         </div>
     </div>
     <div class="signup-box">
         <div>
             <div class="signup-box-details">
                 <div class="signup-content">
-                <p style="margin: 10px 10px 8px 0;">Call to action!</p>
-                <p style="margin: 0;">It is time to protect the blupees!</p>
+                <p style="font-size: 36px; font-weight: 700; margin: 0px;text-align: center;">We need you!</p>
+                <p style="font-size: 20px; font-weight: 700; margin-top: 10px; margin-bottom: 10px;">Here's how you can help:</p>
+                <p style="font-size: 18px; margin: 0;">Our conservation efforts are made possible by contributions from heroes like you. You can donate directly, or you can symbolically adopt a blupee today. Donations can be made in your name or on behalf of someone else.</p>
                 </div>
                 <div class="signup-button-group">
                 <button class="signup-button">Donate Now</button>
@@ -68,7 +69,7 @@
             </div>
         </div>
     </div>
-    <div class="footer">Footer box</div>
+    <div class="footer">© nTowney and TwoGunRosebud, Blupee Conservation Society founders</div>
 </body>
 
 
