Fixed the browser tab title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nick's Home Page</title>
+    <title>Blupee Conservation Society</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
